# Avaphysics

./: .gitignore  Cargo.toml  README.md  shell.nix
shaders/: bodies.frag  bodies.frag.spv  bodies.vert  bodies.vert.spv  space.frag  space.frag.spv  space.vert  space.vert.spv
src/: area.rs  body.rs  camera.rs  gui.rs  lib.rs  main.rs  physical_renderer.rs  start.rs  vulkan_renderer.rs
src/vulkan_renderer/: imgui_renderer.rs  vulkan_logic.rs
