[package]
name = "avaphysics"
version = "0.1.0"
edition = "2024"

[lints.rust]
dead_code = "allow"

[dependencies]
sdl3 = "0.17.3"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
ash = "0.38.0"
stb_image = "0.3.0"
imgui = "0.12.0"
imgui-rs-vulkan-renderer = "1.16.0"
russimp = "3.2.1"
rolt = "0.3.1"
joltc-sys = "0.3.1"
nalgebra-glm = "0.20.0"
rand = "0.9.2"

[[bin]]
name = "avaphysics"
path = "src/start.rs"
