[package]
name = "avaphysics"
version = "0.1.0"
edition = "2024"

[lints.rust]
dead_code = "allow"

[dependencies]
sdl3 = "0.17.3"
vulkano = "0.35.2"
ash = "0.38.0"
stb_image = "0.3.0"
imgui = "0.12.0"
russimp-ng = { version = "3.2.7", features = ["static-link"]}
rapier3d = "0.32.0"
nalgebra-glm = "0.20.0"

[[bin]]
name = "avaphysics"
path = "src/start.rs"
